🎨 CRITICAL DESIGN FIXES: Complete Visual Overhaul
✅ COMPREHENSIVE DESIGN FIXES:
- Created critical-fixes.css with complete styling overhaul
- Fixed font loading and typography issues
- Implemented proper color scheme and gradients
- Added responsive grid system and mobile optimization
- Fixed navigation and button styling issues

🔧 JAVASCRIPT FUNCTIONALITY:
- Created critical-fixes.js with complete interaction system
- Implemented smooth scrolling and navigation
- Added particle system and counter animations
- Fixed mobile menu functionality
- Added scroll reveal animations and performance optimization

📱 MOBILE RESPONSIVENESS:
- Fixed mobile navigation with hamburger menu
- Implemented responsive grid system
- Optimized typography for all screen sizes
- Added touch-friendly interactions
- Fixed viewport and scaling issues

🎯 VISUAL IMPROVEMENTS:
- Professional black & white color scheme
- Smooth animations and transitions
- Proper spacing and typography hierarchy
- Card hover effects and button interactions
- Loading states and scroll effects

🚀 DEVELOPMENT TOOLS:
- Added Node.js development server (server.js)
- Updated package.json with proper scripts
- Optimized for Codespace development
- Added proper MIME types and routing

CODESPACE ISSUES RESOLVED: Design, look, feel, and functionality completely overhauled!

--- a/package.json
+++ b/package.json
@@ -4,9 +4,10 @@
   "description": "Revolutionary Digital Marketing Website with Premium Design",
   "main": "index.html",
   "scripts": {
-    "dev": "live-server --port=3000 --open=/ --watch=css,js,index.html",
+    "dev": "node server.js",
+    "start": "node server.js",
     "build": "echo 'Static site - no build required'",
-    "start": "echo 'Static site ready for deployment'"
+    "serve": "live-server --port=3000 --open=/ --watch=css,js,index.html"
   },
   "keywords": [
     "digital-marketing",
